syntax="proto3";
import "google/protobuf/empty.proto";

option go_package=".;proto";

service User{
	// 注册
	rpc CreateUser(CreateUserInfo) returns(UserInfoResponse);
	// // 登录
	// rpc Login(CreateUserInfo) returns(UserInfoResponse);
	// 密码验证接口
	rpc CheckPassword(CheckPasswordInfo) returns(CheckedResponse);
	// 获取用户列表
  rpc GetUserList(PageInfo) returns(UserListResponse);
	// 通过手机号码获取用户
	rpc GetUserByMobile(MobileRequest) returns(UserInfoResponse);
	// 通过用户 ID 获取用户
	rpc GetUserById(IdRequest) returns(UserInfoResponse);
	// 更新用户信息
	rpc UpdateUser(UpdateUserInfo) returns(google.protobuf.Empty);
}

message CheckPasswordInfo{
	string password=1;
	string encryptedPassword=2;
}

message CheckedResponse{
	bool success=1;
}

message CreateUserInfo{
	string nickName=1;
	string password=2;
	string mobile=3;
}

message UpdateUserInfo{
	int32 id = 1;
	string mobile=2;
	string  nickName =3;
	string gender=4;
	uint64	birthday=5;
}

message PageInfo{
  uint32 page=1;
  uint32 pageSize=2;
}

message MobileRequest{
 string mobile=1;
}

message IdRequest{
	int32 id=1;
}

message UserInfoResponse{
	int32 id = 1;
	string mobile=2;
	string	password=3;
	string  nickName =4;
 	uint64	birthday=5;
	string gender=6;
	int32	role=7;
}

message UserListResponse{
	uint64 total=1;
	repeated UserInfoResponse data=2;
}
